--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 #Set zsh default shell
-set -g default-command /bin/zsh
-set -g default-shell /bin/zsh
+set -g default-command /bin/bash
+set -g default-shell /bin/bash
 
 #setting the delay between prefix and command
 set -sg escape-time 1
@@ -22,6 +22,7 @@ bind s split-window -h
 bind v split-window -v
 
 # forcing vi mode
+set-window-option -g mode-keys vi
 
 # moving between panes
 bind h select-pane -L
