--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 #Set zsh default shell
-set -g default-command /bin/bash
-set -g default-shell /bin/bash
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+set -g default-shell /bin/zsh
 
 #setting the delay between prefix and command
 set -sg escape-time 1
@@ -41,15 +41,13 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # vi copy style
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
-bind -t vi-copy 'V' rectangle-toggle
-
-# mouse support - set to on if you want to use the mouse
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+bind-key -T edit-mode-vi Up send-keys -X history-up
+bind-key -T edit-mode-vi Down send-keys -X history-down
+unbind-key -T copy-mode-vi Space     ;   bind-key -T copy-mode-vi v send-keys -X begin-selection
+unbind-key -T copy-mode-vi Enter     ;   bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+unbind-key -T copy-mode-vi C-v       ;   bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+unbind-key -T copy-mode-vi [         ;   bind-key -T copy-mode-vi [ send-keys -X begin-selection
+unbind-key -T copy-mode-vi ]         ;   bind-key -T copy-mode-vi ] send-keys -X copy-selection
 
 # Scrollback buffer
 set -g history-limit 100000
@@ -85,7 +83,6 @@ bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
 
 # Theming
 # set the status line's colors
-set -g status-utf8 on
 set -g status-fg white
 set -g status-bg default
 
